# Clinexa-Data-Warehouse

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: env_config.py  log_config.py  log_formatter.py
dags/clinical_trials/: process_studies.py  test_process_studies.py
documentation/: analytical_guidance.md  data_quality.md  excluded_fields.md  field_reference.md
infra/: backend.tf  variables.tf
infra/staging/: iam.tf  main.tf  s3.tf  variables.tf
infra/staging/prod/: datalake.tf
src/etl/extraction/: checkpoint.py  extraction.py
src/monitoring/: exceptions.py  notifications.py
src/transformation/: models.py  utils.py
tests/airflow_tests/: failure_generators.py  test_tasks.py
tests/unit/: conftest.py
tests/unit/extraction/: fixtures.py  test_extractor.py  test_failures.py  test_rate_limiter.py  test_state_handler.py
